--- a/google-site-verification.html
+++ b/google-site-verification.html
@@ -1,1 +1,11 @@
-google-site-verification: googlea9401fbcbcf219ad.html
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Google Verification</title>
+   <meta name="google-site-verification" content="nyZT3_b71q33L_8Bogl3SFHSwKLwu667XYCvXQtj7yA" />
+  
+</head>
+<body>
+    <p>Google Site Verification File for Spsiamahmed GitHub Profile</p>
+</body>
+</html>
